.htaccess added to fix 404 error on page refresh

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -68,7 +68,7 @@ $font-weight-semibold: 600;
 $apex-grid-color: #f8f9fa;
 
 // Custom Font
-$font-family-secondary:      'Inter', sans-serif;
+$font-family-secondary:      'Somar', medium;
 
 
 // Variables
@@ -344,7 +344,7 @@ $embed-responsive-aspect-ratios: join(
 // Font, line-height, and color for body text, headings, and more.
 
 // stylelint-disable value-keyword-case
-$font-family-sans-serif:      'Nunito', sans-serif;
+$font-family-sans-serif:      'Somar', sans-serif;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base:            $font-family-sans-serif;
 // stylelint-enable value-keyword-case
